# iro

./: #README.md#  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  iro.pc.in
CMake/: FindNYUTIL.cmake  FindPAM.cmake  Findnyutil.cmake
doc/: CMakeLists.txt  codestyle.md
doc/doxygen/: Doxyfile  Doxyfile.in  doxygen.css  footer.html  header.html
doc/pages/: mainpage.md  todo.md
include/iro/: config.h  include.hpp  iro.hpp
include/iro/backend/: backend.hpp  dbus.hpp  devices.hpp  egl.hpp  glRenderer.hpp  input.hpp  kms.hpp  kmsBackend.hpp  logind.hpp  output.hpp  renderer.hpp  session.hpp  surfaceContext.hpp  tty.hpp  udev.hpp  x11.hpp  x11Backend.hpp
include/iro/compositor/: buffer.hpp  callback.hpp  client.hpp  compositor.hpp  region.hpp  resource.hpp  shell.hpp  shellSurface.hpp  subcompositor.hpp  subsurface.hpp  surface.hpp  window.hpp  xdgPopup.hpp  xdgShell.hpp  xdgSurface.hpp
include/iro/seat/: cursorSurface.hpp  event.hpp  keyboard.hpp  pointer.hpp  seat.hpp  touch.hpp
include/iro/util/: fork.hpp  global.hpp  iroDrawContext.hpp  iroModule.hpp  shader.hpp
include/iro/xwayland/: xwindow.hpp  xwm.hpp
private/: iro.cbp  iro.depend  iro.layout
private/backups/1/: main.cpp  server.cpp  server.hpp  types.cpp  types.hpp  wlInterface.cpp  wlInterface.hpp  x11Backend.cpp  x11Backend.hpp
private/backups/2/src/: main.cpp  server.cpp  server.hpp
private/backups/2/src/backend/: egl.cpp  egl.hpp  output.hpp  renderer.cpp
private/backups/2/src/backend/kms/: input.hpp  kmsBackend.cpp  kmsBackend.hpp
private/backups/2/src/compositor/: compositor.hpp
private/backups/2/src/resources/: region.cpp  shellSurface.cpp  shellSurface.hpp  subsurface.cpp  subsurface.hpp  surface.cpp  surface.hpp
private/backups/2/src/seat/: keyboard.cpp  pointer.cpp  seat.hpp
private/backups/2/src/shader/: shader.cpp
private/backups/2/src/shell/: shell.cpp  shell.hpp
private/backups/2/src/util/: misc.hpp  nonCopyable.hpp  rect.hpp  thread.hpp  transformable.hpp  utils.hpp  vec.hpp
src/: CMakeLists.txt  iro.hpp  iroModule.hpp  log.hpp  main.cpp  server.cpp  server.hpp
src/backend/: backend.cpp  backend.hpp  egl.cpp  egl.hpp  output.cpp  output.hpp  renderer.cpp  renderer.hpp  session.cpp  session.hpp  tty.cpp  tty.hpp
src/backend/kms/: input.cpp  input.hpp  kmsBackend.cpp  kmsBackend.hpp
src/backend/x11/: x11Backend.cpp  x11Backend.hpp
src/compositor/: compositor.cpp  compositor.hpp  subcompositor.cpp  subcompositor.hpp
src/iro/: CMakeLists.txt  config.h.in  include.hpp  iro.cpp  iro.hpp  iroModule.cpp  iroModule.hpp  log.hpp  main.cpp
src/iro-desktop/: CMakeLists.txt  main.cpp
src/iro-shell/: CMakeLists.txt  shell.cpp
src/iro-shell/proto/: CMakeLists.txt
src/iro/backend/: backend.cpp  backend.hpp  dbus.cpp  devices.cpp  egl.cpp  glRenderer.cpp  input.cpp  kms.cpp  kmsBackend.cpp  logind.cpp  output.cpp  output.hpp  renderer.cpp  renderer.hpp  session.cpp  surfaceContext.cpp  tty.cpp  udev.cpp  x11.cpp  x11Backend.cpp
src/iro/backend/kms/: input.cpp  kmsBackend.cpp  kmsBackend.hpp
src/iro/backend/x11/: x11Backend.cpp
src/iro/compositor/: buffer.cpp  callback.cpp  client.cpp  compositor.cpp  compositor.hpp  region.cpp  resource.cpp  shell.cpp  shellSurface.cpp  subcompositor.cpp  subcompositor.hpp  subsurface.cpp  surface.cpp  window.cpp  xdgPopup.cpp  xdgShell.cpp  xdgSurface.cpp
src/iro/proto/: CMakeLists.txt
src/iro/resources/: buffer.cpp  buffer.hpp  callback.cpp  callback.hpp  client.cpp  client.hpp  region.cpp  region.hpp  resource.cpp  resource.hpp  shellSurface.cpp  shellSurface.hpp  subsurface.cpp  subsurface.hpp  surface.cpp  surface.hpp
src/iro/seat/: cursorSurface.cpp  keyboard.cpp  keyboard.hpp  pointer.cpp  pointer.hpp  seat.cpp  seat.hpp  touch.cpp
src/iro/shader/: shader.cpp  shader.hpp  sources.hpp
src/iro/shell/: shell.cpp  shell.hpp
src/iro/util/: fork.cpp  global.cpp  iroModule.cpp  os.cpp  os.hpp  shader.cpp  wlArray.hpp
src/iro/xwayland/: xwindow.cpp  xwm.cpp
src/modules/: CMakeLists.txt
src/modules/desktop/: desktop-module.cpp
src/modules/login/: login-module.cpp
src/modules/shell/: shell.cpp
src/protos/: CMakeLists.txt
src/resources/: buffer.cpp  buffer.hpp  callback.cpp  callback.hpp  client.cpp  client.hpp  region.cpp  region.hpp  resource.cpp  resource.hpp  shellSurface.cpp  shellSurface.hpp  subsurface.cpp  subsurface.hpp  surface.cpp  surface.hpp
src/seat/: event.hpp  keyboard.cpp  keyboard.hpp  pointer.cpp  pointer.hpp  seat.cpp  seat.hpp
src/shader/: shader.hpp  sources.hpp
src/shell/: shell.cpp  shell.hpp
src/util/: callback.hpp  mat.hpp  misc.hpp  nonCopyable.hpp  rect.hpp  refVec.hpp  region.hpp  time.hpp  vec.hpp
